database restructuring
