# target/openapi-docs/openapi.json
@@ -386,6 +386,12 @@
     },
     "name": {
      "type": "string"
+    },
+    "password": {
+     "type": "string"
+    },
+    "username": {
+     "type": "string"
     }
    }
   },
